--- a/index.html
+++ b/index.html
@@ -271,16 +271,16 @@ $(document).ready(function() {
         
         <div style="display: none;">
           <div id="inline1" style="width:600px;height:550px;overflow:auto;">
-          <p>TThe Los Altos History Museum is unsurprisingly located in Los Altos, CA, about 40 miles south of San Francisco. The nearest airport is San Jose Airport (SJC), though San Francisco Airport (SFO) is also convenient.
+          <p>The Los Altos History Museum is unsurprisingly located in Los Altos, CA, about 40 miles south of San Francisco. The nearest airport is San Jose Airport (SJC), though San Francisco Airport (SFO) is also convenient.
 </p>
 <div class="line-seperator"></div>
-<p>The outdoor ceremony will promptly begin at 4:30pm. Dinner and dancing will follow. Formal attire expected. Warm weather is expected, with historical averages of about 68°F, but because the ceremony and reception are outdoors, please prepare accordingly. Ample parking will be available on site.
+<p>The outdoor ceremony will promptly begin at 4:30pm, and dinner and dancing will follow. Warm weather is expected, with historical averages of about 68°F, but because the ceremony and reception are outdoors, please prepare accordingly. Ample parking will be available on site.
 </p> 
 <div class="line-seperator"></div>
 <p>If you are joining us from out of town, you may wish to book a hotel reservation. Some hotels we can recommend that are located closer to the venue include:</p>
 <p><i>TBD</i><br /></p>
 <div class="line-seperator"></div>
-<p>Any questions, comments, concerns, playlist requests, or accommodation inquiries, feel free to us: <a href="mailto:kaopihwedding@gmail.com">kaopihwedding@gmail.com</a></p>
+<p>Any questions, comments, concerns, or accommodation inquiries, feel free to us: <a href="mailto:kaopihwedding@gmail.com">kaopihwedding@gmail.com</a></p>
 
           </div>
         </div>
