--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@ $(document).ready(function() {
         </div>
         <div class="highlights">
           <a class="heart mint second">Highlight 2 - Andrew<span></span></a>
-          <h4><span>March 19, 2009 - June 2010</span><br />Andrew and Jessica begin hanging out on March 19, 2009, when Andrew asks Jessica out...to a FroYo run at a campus eatery.  Over the next few years, Andrew uses excuses like “I crave ramen” and “Sprinkles Cupcakes is offering a free cupcake promotion!” to spend time together. (Andrew now admits that he doesn’t really like cupcakes, much to Jessica’s chagrin.)</h4>
+          <h4><span>2009 - June 2010</span><br />Andrew and Jessica begin hanging out in 2009, when Andrew asks Jessica out...to a FroYo run at a campus eatery.  Over the next few years, Andrew uses excuses like “I crave ramen” and “Sprinkles Cupcakes is offering a free cupcake promotion!” to spend time together. (Andrew now admits that he doesn’t really like cupcakes, much to Jessica’s chagrin.)</h4>
         </div>
         <div class="highlights">
           <a class="heart coral second">Highlight 2 - Jessica<span></span></a>
-          <h4><span>March 19, 2009 - June 2010</span><br />Jessica lives in a sorority house which does not offer food on weekends. Lacking a car, Jessica often has limited dinner options, and she misses Asian food.  Thus, she excitedly takes Andrew up on his offers to drive and pay for ramen and pho (which she completely mispronounces, but Andrew is too charmed by her cuteness to correct her).</h4>
+          <h4><span>2009 - June 2010</span><br />Jessica lives in a sorority house which does not offer food on weekends. Lacking a car, Jessica often has limited dinner options, and she misses Asian food.  Thus, she excitedly takes Andrew up on his offers to drive and pay for ramen and pho (which she completely mispronounces, but Andrew is too charmed by her cuteness to correct her).</h4>
         </div>
         <div class="highlights">
           <a class="heart mint third">Highlight 3 - Andrew<span></span></a>
