--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ $(document).ready(function() {
           <div style="display:none">
             <div id="guy2" class="people-details">
               <img src="http://placehold.it/350x350" />
-              <h4>Groosman</h4>
+              <h4>Groomsman</h4>
               <p>Daniel Kim and Andrew first met in 8th grade; Daniel was new to school and looking for friends, and Andrew really enjoyed the lunches Mrs. Kim packed. In 10th grade, they started becoming close friends by lamenting over common tragedies: girls, AP classes, and strict Asian mothers. Daniel went through a major rebirth at MIT, where he started going by “Dan,” danced hip-hop, and received Asian popstar haircuts. Being the loving person he is, Andrew has forgiven these missteps and is elated that they have grown to become close brothers in Christ. Dan(iel) is currently enrolled at Stanford’s MD/PhD program. He will also be enrolled next year. And the next. And the next.</p>
             </div>
           </div>
@@ -336,15 +336,15 @@ $(document).ready(function() {
           <div style="display:none">
             <div id="guy3" class="people-details">
               <img src="http://placehold.it/350x350" />
-              <h4>Groosman</h4>
-              <p>Tim Sun is Andrew’s bestie from Stanford. Actually, they really are not “besties,” but because Jessica has so many best friends/besties/BFFs, Andrew would like to have one too. Anyway, Andrew met Tim through InterVarsity. In fact, during one of the first InterVarsity events Andrew attended, Tim gave a testimony about trying to serve God while pursuing a banking internship at Goldman Sachs. From that moment forth, Andrew decided to be friends with Tim because rich friends are always good to have. Andrew and Tim have bonded over the years due to their shared interests in Jesus, playing basketball, Stanford football, and career aspirations (they are both ex-economic consultants!). Tim now attends business school at Sloan (MIT) where he spends more time fending off women than actually studying.</p>
+              <h4>Groomsman</h4>
+              <p>Tim Sun is Andrew’s bestie from Stanford. Actually, they really are not “besties,” but because Jessica has so many best friends/besties/BFFs, Andrew would like one too. Anyway, Andrew met Tim through InterVarsity. In fact, during one of the first InterVarsity events Andrew attended, Tim gave a testimony about trying to serve God while pursuing a banking internship at Morgan Stanley. From that moment forth, Andrew decided to be friends with Tim because rich friends are always good to have. Andrew and Tim have bonded over the years due to their shared interests in Jesus, playing basketball, Stanford football, and career aspirations (they are both ex-economic consultants!). Tim now attends business school at Sloan (MIT) where he spends more time fending off women than actually studying.</p>
             </div>
           </div>
           <a class="wp four" rel="guys-gallery" href="#guy4"><span></span></a>
           <div style="display:none">
             <div id="guy4" class="people-details">
               <img src="http://placehold.it/350x350" />
-              <h4>Groosman</h4>
+              <h4>Groomsman</h4>
               <p>Will Choi is Andrew’s friend from college and current roommate. During this past year as roommates, Will buys delicious TV dinners from Trader Joe’s (or Mollie Stones when he wants to live large), always leaves the toilet seat up, and lets Andrew watch all the sports he wants without nagging. Andrew is hopeful that his future roommate will be as accommodating. Most importantly, Will agreed to let Andrew take the “lucky” room in their apartment/house/weird dwelling; the previous tenant of that room moved out upon getting married, and now Andrew will follow suit. Will is counting down the days til Andrew moves out so he can take over. Will is the co-founder of a mindblowing startup - go look up “Aviate” for Android devices (who needs PR firms when you can just have Andrew give you free press on his wedding website?) - and in his free time, slaves away building websites for Andrew.</p>
             </div>
           </div>
