--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ $(document).ready(function() {
           <a class="wp one" rel="girls-gallery" href="#girl1"><span></span></a>
           <div style="display:none">
             <div id="girl1" class="people-details">
-              <img src="http://placehold.it/350x350" />
+              <img src="images/gallery/b1.jpg" />
               <h4>Maid of Honor</h4>
               <p>Amanda Gartside is Jessica’s best friend from elementary school. She lived around the corner from Jessica, and the two would walk to school together, bake shortbread together, play soccer together, and do homework together, or rather, Amanda would tutor Jessica. Throughout their friendship, Amanda has been a faithful prayer warrior for Jessica. Jessica would not be where she is or who she is today without Amanda!</p>
             </div>
@@ -367,7 +367,7 @@ $(document).ready(function() {
           <a class="wp two" rel="girls-gallery" href="#girl2"><span></span></a>
           <div style="display:none">
             <div id="girl2" class="people-details">
-              <img src="http://placehold.it/350x350" />
+              <img src="images/gallery/b2.jpg" />
               <h4>Bridesmaid</h4>
               <p>Jacqueline Holt became best friends with Jessica at Stanford. Since living in the same freshman dorm to joining the same sorority to serving on the same ministry team with InterVarsity Fellowship group, Jacqueline and Jessica are like yin and yang. They spent a quarter studying abroad in Madrid together, and travelled all over Europe, including Italy to visit their friend, Kimbo.</p>
             </div>
@@ -375,7 +375,7 @@ $(document).ready(function() {
           <a class="wp three" rel="girls-gallery" href="#girl3"><span></span></a>
           <div style="display:none">
             <div id="girl3" class="people-details">
-              <img src="http://placehold.it/350x350" />
+              <img src="images/gallery/b3.jpg" />
               <h4>Bridesmaid</h4>
               <p>Kimberly Chang, fondly known as Kimbo, is another bestie from Stanford and Jessica’s sophomore year roommate. Kimbo and Jessica enjoyed eating gouda and ritz crackers together in their two-room double in Pi Phi. Now, Kimbo and Jessica work blocks away from each other in the SF Financial District, enjoying their morning coffee dates at Coffee Bean.</p>
             </div>
@@ -383,7 +383,7 @@ $(document).ready(function() {
           <a class="wp four" rel="girls-gallery" href="#girl4"><span></span></a>
           <div style="display:none">
             <div id="girl4" class="people-details">
-              <img src="http://placehold.it/350x350" />
+              <img src="images/gallery/b4.jpg" />
               <h4>Bridesmaid</h4>
               <p>Elise Gibbs is yet another BFF from Stanford. Elise has been rooming with Jessica since senior year in Pi Phi, and Jessica will be sad to be separated from this dream team roomie pairing. Jessica is especially miss Elise’s impulse buying, as Jessica has reaped the benefits from Elise’s Keurig machine, hair straightener, and Magic Bullet. Elise and Jessica enjoy bedazzling, eating gummy vitamins, and lounging around our apartment. Elise is also Jessica’s free therapist as Elise earns her Doctor of Psychology from Stanford.</p>
             </div>
