--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ $(document).ready(function() {
   $("a[rel=story-gallery]").fancybox({
     'titlePosition'   : 'inside',
     'titleFormat'   : function(title, currentArray, currentIndex, currentOpts) {
-      return '<span id="fancybox-title-over">Image ' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
+      return '<span id="fancybox-title-over">' + (title.length ? ' &nbsp; ' + title : '') + '</span>';
     }
   });
 
@@ -172,11 +172,11 @@ $(document).ready(function() {
       <h2 class="gallery-title">Click on the boxes</h2>
       
       <div class="gallery">
-        <a class="photo one" rel="story-gallery" href="images/gallery/1.jpg" title="">Photo<span></span></a>
-        <a class="photo two" rel="story-gallery" href="images/gallery/2.jpg" title="">Photo<span></span></a>
-        <a class="photo three" rel="story-gallery" href="images/gallery/3.jpg" title="">Photo<span></span></a>
-        <a class="photo four" rel="story-gallery" href="images/gallery/4.jpg" title="">Photo<span></span></a>
-        <a class="photo five" rel="story-gallery" href="images/gallery/5.jpg" title="">Photo<span></span></a>
+        <a class="photo one" rel="story-gallery" href="images/gallery/1.jpg" title="Test Title">Photo<span></span></a>
+        <a class="photo two" rel="story-gallery" href="images/gallery/2.jpg" title="Andrew">Photo<span></span></a>
+        <a class="photo three" rel="story-gallery" href="images/gallery/3.jpg" title="Type">Photo<span></span></a>
+        <a class="photo four" rel="story-gallery" href="images/gallery/4.jpg" title="Things">Photo<span></span></a>
+        <a class="photo five" rel="story-gallery" href="images/gallery/5.jpg" title="Here!">Photo<span></span></a>
         <a class="photo six" rel="story-gallery" href="images/gallery/6.jpg" title="">Photo<span></span></a>
         <a class="photo seven" rel="story-gallery" href="images/gallery/7.jpg" title="">Photo<span></span></a>
         <a class="photo eight" rel="story-gallery" href="images/gallery/8.jpg" title="">Photo<span></span></a>
