--- a/index.html
+++ b/index.html
@@ -172,24 +172,24 @@ $(document).ready(function() {
       <h2 class="gallery-title">Click on the boxes</h2>
       
       <div class="gallery">
-        <a class="photo one" rel="story-gallery" href="images/gallery/1.jpg" title="Test Title">Photo<span></span></a>
-        <a class="photo two" rel="story-gallery" href="images/gallery/2.jpg" title="Andrew">Photo<span></span></a>
-        <a class="photo three" rel="story-gallery" href="images/gallery/3.jpg" title="Type">Photo<span></span></a>
-        <a class="photo four" rel="story-gallery" href="images/gallery/4.jpg" title="Things">Photo<span></span></a>
-        <a class="photo five" rel="story-gallery" href="images/gallery/5.jpg" title="Here!">Photo<span></span></a>
-        <a class="photo six" rel="story-gallery" href="images/gallery/6.jpg" title="">Photo<span></span></a>
-        <a class="photo seven" rel="story-gallery" href="images/gallery/7.jpg" title="">Photo<span></span></a>
-        <a class="photo eight" rel="story-gallery" href="images/gallery/8.jpg" title="">Photo<span></span></a>
-        <a class="photo nine" rel="story-gallery" href="images/gallery/9.jpg" title="">Photo<span></span></a>
-        <a class="photo ten" rel="story-gallery" href="images/gallery/10.jpg" title="">Photo<span></span></a>
-        <a class="photo eleven" rel="story-gallery" href="images/gallery/11.jpg" title="">Photo<span></span></a>
-        <a class="photo twelve" rel="story-gallery" href="images/gallery/12.jpg" title="">Photo<span></span></a>
-        <a class="photo thirteen" rel="story-gallery" href="images/gallery/13.jpg" title="">Photo<span></span></a>
-        <a class="photo fourteen" rel="story-gallery" href="images/gallery/14.jpg" title="">Photo<span></span></a>
-        <a class="photo fifteen" rel="story-gallery" href="images/gallery/15.jpg" title="">Photo<span></span></a>
-        <a class="photo sixteen" rel="story-gallery" href="images/gallery/16.jpg" title="">Photo<span></span></a>
-        <a class="photo seventeen" rel="story-gallery" href="images/gallery/17.jpg" title="">Photo<span></span></a>
-        <a class="photo eighteen" rel="story-gallery" href="images/gallery/18.jpg" title="">Photo<span></span></a>
+        <a class="photo one" rel="story-gallery" href="images/gallery/1.jpg" title="Cheering Stanford on to victory">Photo<span></span></a>
+        <a class="photo two" rel="story-gallery" href="images/gallery/2.jpg" title="First picture after Jessica agrees to be Andrew's girlfriend">Photo<span></span></a>
+        <a class="photo three" rel="story-gallery" href="images/gallery/3.jpg" title="Jessica's Senior Formal">Photo<span></span></a>
+        <a class="photo four" rel="story-gallery" href="images/gallery/4.jpg" title="Andrew's Senior Formal (pre-dating but already admiring each other!)">Photo<span></span></a>
+        <a class="photo five" rel="story-gallery" href="images/gallery/5.jpg" title="Day-te at Hakone Gardens">Photo<span></span></a>
+        <a class="photo six" rel="story-gallery" href="images/gallery/6.jpg" title="Wine tasting at Napa">Photo<span></span></a>
+        <a class="photo seven" rel="story-gallery" href="images/gallery/7.jpg" title="Our first house! Home sweet home...">Photo<span></span></a>
+        <a class="photo eight" rel="story-gallery" href="images/gallery/8.jpg" title="Lucked out on last minute reservations to Cyrus, on the last day it was open">Photo<span></span></a>
+        <a class="photo nine" rel="story-gallery" href="images/gallery/9.jpg" title="Caroling in the City">Photo<span></span></a>
+        <a class="photo ten" rel="story-gallery" href="images/gallery/10.jpg" title="Jessica getting used to loving Snoopy">Photo<span></span></a>
+        <a class="photo eleven" rel="story-gallery" href="images/gallery/11.jpg" title="Filoli Gardens">Photo<span></span></a>
+        <a class="photo twelve" rel="story-gallery" href="images/gallery/12.jpg" title="Andrew's birthday dinner. Finally Jessica pays!">Photo<span></span></a>
+        <a class="photo thirteen" rel="story-gallery" href="images/gallery/13.jpg" title="Andrew tries the outdoors">Photo<span></span></a>
+        <a class="photo fourteen" rel="story-gallery" href="images/gallery/14.jpg" title="Date night at Aziza restaurant">Photo<span></span></a>
+        <a class="photo fifteen" rel="story-gallery" href="images/gallery/15.jpg" title="Rainy day in SF">Photo<span></span></a>
+        <a class="photo sixteen" rel="story-gallery" href="images/gallery/16.jpg" title="Go Lakers!">Photo<span></span></a>
+        <a class="photo seventeen" rel="story-gallery" href="images/gallery/17.jpg" title="Tooth Fairy bought Andrew for $1">Photo<span></span></a>
+        <a class="photo eighteen" rel="story-gallery" href="images/gallery/18.jpg" title="Countless stairs to Coit Tower">Photo<span></span></a>
       </div>
     
     </div>
