--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ $(document).ready(function() {
             <div id="girl2" class="people-details">
               <img src="images/gallery/b2.jpg" />
               <h4>Bridesmaid</h4>
-              <p>Jacqueline Holt became best friends with Jessica at Stanford. Since living in the same freshman dorm to joining the same sorority to serving on the same ministry team with InterVarsity Fellowship group, Jacqueline and Jessica are like yin and yang. They spent a quarter studying abroad in Madrid together, and travelled all over Europe, including Italy to visit their friend, Kimbo.</p>
+              <p>Jacqueline Holt and Jessica became best friends at Stanford, doing nearly everything the same. Since living in the same freshman dorm, declaring the same major, joining the same sorority, serving on the same InterVarsity ministry team, leading sorority small group together, studying abroad in Spain together, and rooming together, Jacqueline and Jessica are like two peas in a pod. Jacqueline has been the emotional backbone to Jessica!! She is probably the most empathetic, caring person you will ever meet. In fact, Jacqueline was critical in helping Jessica to achieve her long-time aspiration of exuding a more of a “Feeler”* personality. Jessica is ever thankful to Jacqueline for walking beside her through college as a sister in Christ. *See Meyer’s Brigg Test results</p>
             </div>
           </div>
           <a class="wp three" rel="girls-gallery" href="#girl3"><span></span></a>
@@ -377,7 +377,7 @@ $(document).ready(function() {
             <div id="girl3" class="people-details">
               <img src="images/gallery/b3.jpg" />
               <h4>Bridesmaid</h4>
-              <p>Kimberly Chang, fondly known as Kimbo, is another bestie from Stanford and Jessica’s sophomore year roommate. Kimbo and Jessica enjoyed eating gouda and ritz crackers together in their two-room double in Pi Phi. Now, Kimbo and Jessica work blocks away from each other in the SF Financial District, enjoying their morning coffee dates at Coffee Bean.</p>
+              <p>Bridesmaid: Kimberly Chang, fondly known as Kimbo, constitutes the other half of the token asian besties in their mostly blond-headed sorority; hence all the blonde friends... Some of their finer moments included eating a Costco-size chunk of Gouda cheese with a box of Ritz crackers together in their two-room double while watching old episodes of the OC. Together with Jacqueline, Kimbo nearly converted Jessica into being a San Francisco Giants fan; luckily, Andrew has since rescued Jessica and reclaimed her as a LA sports fan. Kimbo was able to receive some of the fruits of Andrew’s pursuit of Jessica; more often than not, Andrew would deliver boba to Jessica and pick up one for Kimbo, too. Now working blocks away from each other in the SF Financial District, Kimbo and Jessica enjoy their near-daily morning coffee dates at the Coffee Bean on Montgomery and Bush Streets. Kimbo also played an integral role in the proposal story, so you should ask her about it!</p>
             </div>
           </div>
           <a class="wp four" rel="girls-gallery" href="#girl4"><span></span></a>
@@ -385,7 +385,7 @@ $(document).ready(function() {
             <div id="girl4" class="people-details">
               <img src="images/gallery/b4.jpg" />
               <h4>Bridesmaid</h4>
-              <p>Elise Gibbs is yet another BFF from Stanford. Elise has been rooming with Jessica since senior year in Pi Phi, and Jessica will be sad to be separated from this dream team roomie pairing. Jessica is especially miss Elise’s impulse buying, as Jessica has reaped the benefits from Elise’s Keurig machine, hair straightener, and Magic Bullet. Elise and Jessica enjoy bedazzling, eating gummy vitamins, and lounging around our apartment. Elise is also Jessica’s free therapist as Elise earns her Doctor of Psychology from Stanford.</p>
+              <p>Elise Gibbs is yet another bestie from Stanford and has been Jessica’s roommate for the past two years. It is surprising that Elise has not gotten tired of Jessica’s random antics yet! Jessica will be sad to be separated from this dream team roomie pairing. Elise and Jessica enjoy bedazzling, eating gummy vitamins, leaving each other colorful love notes, pretending to do their homework and real-work-work, and lounging around their apartment. Elise is also Jessica’s free therapist as Elise earns her Doctor of Psychology from her Stanford program. Elise and Andrew also have a special relationship, rehashing the details of the Bachelorette every Tuesday morning.  Elise is credited for strangely forcing Jessica into nice clothes the morning of her surprise proposal, as Jessica was planning to sleep in that day and wear jeans. As a roommate, Elise orders a weekly box of farm-to-table organic produce, always leaves the toilet seat down, and never wastes her time watching sports. Jessica is hopeful that her future roommate will be as accommodating. </p>
             </div>
           </div>
         </div>
