--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ $(document).ready(function() {
             <div id="girl1" class="people-details">
               <img src="images/gallery/b1.jpg" />
               <h4>Maid of Honor</h4>
-              <p>Amanda Gartside is Jessica’s best friend from elementary school. She lived around the corner from Jessica, and the two would walk to school together, bake shortbread together, play soccer together, and do homework together, or rather, Amanda would tutor Jessica. Throughout their friendship, Amanda has been a faithful prayer warrior for Jessica. Jessica would not be where she is or who she is today without Amanda!</p>
+              <p>Maid of Honor: Best friends since elementary school, Amanda and Jessica lived around the corner from each other in La Canada. The two would walk to elementary school, bake shortbread, serve on student government, play soccer, and do homework together. From sharing books, building forts, carpooling to high school, freezing in Maine, to traveling in Europe together, Amanda and Jessica were always looking for new adventures. Most importantly, through the ups and downs, they always knew who they could count on and call; even if they hadn't talked for a while, it would feel as though no time had passed since they were last together. Throughout their friendship, Amanda has been a faithful prayer warrior for Jessica. Jessica would not be where she is or who she is today without Amanda!</p>
             </div>
           </div>
           <a class="wp two" rel="girls-gallery" href="#girl2"><span></span></a>
