Add kaopih logo

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ $(document).ready(function() {
     &nbsp;
     <div class="content-box">
       <div class="home-container">
+        <img src="images/kaopih.png" class="logo" />
         <h1>Andrew + Jessica</h1>
         <!-- <h4>+</h4>
         <h1>Jessica</h1> -->
