--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ $(document).ready(function() {
 " target="_blank" class="directions btn">Driving Directions<span></span></a> 
         </div>
         <div class="menu">
-        <a href="#AndrewPutMenuHere" target="_blank" class="btn">Menu<span></span></a> 
+        <a href="#AndrewPutMenuHere" target="_blank" class="menu btn">Menu<span></span></a> 
         </div>
       </div>
       
