--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ $(document).ready(function() {
         <a href="https://maps.google.com/maps?q=Los+Altos+History+Museum,&hl=en&sll=37.567458,-122.27129&sspn=0.640049,1.454315&oq=los+altos+histo&hq=Los+Altos+History+Museum,&hnear=Los+Altos+History+Museum,+51+S+San+Antonio+Rd,+Los+Altos,+California+94022&t=m&geocode=FWBiOgIdDri4-A&z=14
 " target="_blank" class="info btn">Driving Directions<span></span></a> 
         
-        <a href="#AndrewPutMenuHere" target="_blank" class="info btn">Menu<span></span></a> 
+        <a href="menu.pdf" target="_blank" class="info btn">Menu<span></span></a> 
       </div>
       
     </div>
