--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ $(document).ready(function() {
 </p> 
 <div class="line-seperator"></div>
 <p>If you are joining us from out of town, you may wish to book a hotel reservation. We have reserved a room block and negotiated a special rate at the Four Seasons Silicon Valley. More information can be found here:</p>
-<p><i>http://www.fourseasons.com/siliconvalley/jessica_andrew_wedding.html</i><br /></p>
+<p><i>href="http://www.fourseasons.com/siliconvalley/jessica_andrew_wedding.html"</i><br /></p>
 <div class="line-seperator"></div>
 <p>Any questions, comments, concerns, or accommodation inquiries, feel free to us: <a href="mailto:kaopihwedding@gmail.com">kaopihwedding@gmail.com</a></p>
 
