--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ $(document).ready(function() {
 
 <div id="header">
 <ul id="navigation">
-  <li class="home-nav" onClick="scrollNav('.home')">A + J</li>
+  <li class="home-nav" onClick="scrollNav('.home')">kaopih</li>
   <li class="pictures-nav" onClick="scrollNav('.pictures')">Pictures</li>
   <li class="story-nav" onClick="scrollNav('.story')">Our Story</li>
   <li class="info-nav" onClick="scrollNav('.info')">Event Info</li>
