--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>
-  Andrew + Jessica | We're Getting Married!
+  kaopih | Andrew + Jessica | We're Getting Married!
 </title>
 
 <!-- Meta Tags -->
